# agv-warehouse

./: .gitignore  AGV_Design.md  README.md  report.md
config/: turtlebot3_slam_tuned.lua
data/logs/: .gitkeep
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  requirements.txt
implements_detail/: map-details.md  phase4.md  tuning_insight.md  turtlebot_warehouse_integration.md
scripts/: LOG_MEANINGS.md  README.md  debug_transport.sh  launch_cartographer_tuned.sh  launch_large_warehouse.sh  launch_transport_demo.sh  launch_transport_web_demo.sh  launch_turtlebot3_world.sh  launch_warehouse_world.sh  load_map.sh  run_dev.sh  send_order.sh  setup.sh  spawn_box_example.py  vendor_warehouse_assets.sh
src/agv_auto_explore/: package.xml  setup.cfg  setup.py
src/agv_auto_explore/agv_auto_explore/: __init__.py  exploration_node.py
src/agv_auto_explore/config/: backup_exploration_params.yaml  exploration_params.yaml  nav2_exploration_params.yaml  tugbot_nav2_params.yaml
src/agv_auto_explore/launch/: auto_exploration.launch.py  full_auto_exploration.launch.py  nav2_exploration.launch.py
src/agv_auto_explore/test/: __init__.py  test_frontier_detection.py  test_goal_selection.py  test_visualization.py
src/agv_transport/: package.xml  pytest.ini  setup.cfg  setup.py
src/agv_transport/agv_transport/: __init__.py  cargo_simulator.py  models.py  station_manager.py  transport_fsm.py  transport_task_manager_node.py
src/agv_transport/config/: tugbot_nav2_transport_params.yaml  warehouse_stations.yaml
src/agv_transport/launch/: transport_manager.launch.py
src/agv_transport/test/: __init__.py  (+7 more)
src/agv_transport_web/: README.md  package.xml  pytest.ini  requirements.txt  setup.cfg  setup.py
src/agv_transport_web/agv_transport_web/: __init__.py  api_routes.py  app.py  config.py  error_handlers.py  ros2_bridge.py  station_manager.py  web_dashboard.py
src/agv_transport_web/config/: .gitkeep  default.env
src/agv_transport_web/launch/: .gitkeep
src/agv_transport_web/static/css/: base.css  dashboard.css
src/agv_transport_web/static/js/: connection-status.js  dashboard.js  notifications.js  order-form.js  queue-panel.js  status-panel.js  utils.js
src/agv_transport_web/templates/: .gitkeep  base.html  dashboard.html
src/agv_transport_web/test/: test_error_display.py  test_ros2_bridge.py  test_station_manager.py
src/turtlebot3_simulations/turtlebot3_large_warehouse_sim/: CMakeLists.txt  README.md  package.xml
src/turtlebot3_simulations/turtlebot3_large_warehouse_sim/launch/: tugbot_large_warehouse.launch.py  turtlebot3_large_warehouse.launch.py
src/turtlebot3_simulations/turtlebot3_large_warehouse_sim/warehouse_assets/models/Tugbot-charging-station/: model.sdf
src/turtlebot3_simulations/turtlebot3_large_warehouse_sim/warehouse_assets/models/Walking_actor/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_large_warehouse_sim/warehouse_assets/models/shelf_big/: model.sdf
src/turtlebot3_simulations/turtlebot3_large_warehouse_sim/warehouse_assets/worlds/: tugbot_warehouse.world
src/turtlebot3_simulations/turtlebot3_warehouse_sim/: CMakeLists.txt  package.xml
src/turtlebot3_simulations/turtlebot3_warehouse_sim/launch/: turtlebot3_warehouse_world.launch.py
src/turtlebot3_simulations/turtlebot3_warehouse_sim/warehouse_assets/models/aws_robomaker_warehouse_Bucket_01/: model.sdf
src/turtlebot3_simulations/turtlebot3_warehouse_sim/warehouse_assets/models/aws_robomaker_warehouse_ClutteringC_01/: model.sdf
src/turtlebot3_simulations/turtlebot3_warehouse_sim/warehouse_assets/models/aws_robomaker_warehouse_DeskC_01/: model.sdf
src/turtlebot3_simulations/turtlebot3_warehouse_sim/warehouse_assets/models/aws_robomaker_warehouse_Lamp_01/: model.sdf
src/turtlebot3_simulations/turtlebot3_warehouse_sim/warehouse_assets/models/aws_robomaker_warehouse_PalletJackB_01/: model.sdf
src/turtlebot3_simulations/turtlebot3_warehouse_sim/warehouse_assets/models/aws_robomaker_warehouse_ShelfE_01/: model.sdf
src/turtlebot3_simulations/turtlebot3_warehouse_sim/warehouse_assets/models/aws_robomaker_warehouse_ShelfF_01/: model.sdf
src/turtlebot3_simulations/turtlebot3_warehouse_sim/warehouse_assets/models/aws_robomaker_warehouse_WallB_01/: model.sdf
(+10 files in other folders)
