<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_large_warehouse_sim</name>
  <version>0.1.0</version>
  <description>
    Launch TurtleBot3 (ROS2 Jazzy) in a large warehouse world based on MovAi Tugbot Warehouse.
    Modified for Gazebo Harmonic compatibility with Walking actors for dynamic obstacle testing.
  </description>
  <maintainer email="user@example.com">AGV Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

